overflow fix

--- a/src/styles/Loginpage.module.scss
+++ b/src/styles/Loginpage.module.scss
@@ -47,6 +47,7 @@
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden;
 
   // animation
   &__svg {
@@ -164,7 +165,7 @@
     backdrop-filter: blur(10px);
     border-radius: 40px;
     color: black;
-    width: 420px;
+    width: 400px;
     height: 500px;
     padding: 1rem 2rem 2rem 2rem;
     position: absolute;
