--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -23,6 +23,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 /***********
